<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:paddingLeft="10dp"
              android:paddingRight="10dp">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/common_title"
            android:gravity="center_horizontal"/>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/input_access_key"
            android:gravity="center_horizontal"/>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="40dp"
                android:id="@+id/add_author"
                android:layout_height="45dp"
                android:text="@string/access_key"/>
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:id="@+id/access_key_edit"
                android:inputType="text"/>
    </LinearLayout>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
        <Button
                android:id="@+id/access_button_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/commit"
                android:onClick="accessKey"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"/>
    </RelativeLayout>
</LinearLayout>
