<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content" android:paddingLeft="10dp" android:paddingRight="10dp">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/common_title"
            android:gravity="center_horizontal"/>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/add_idea"
            android:gravity="center_horizontal"/>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="40dp"
                android:id="@+id/add_author"
                android:layout_height="45dp"
                android:text="@string/nick_name"/>
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:id="@+id/add_author_edit" android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="40dp"
                android:id="@+id/add_title"
                android:layout_height="45dp"
                android:text="@string/title"/>
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:id="@+id/add_title_edit" android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:id="@+id/add_content"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:text="@string/content"/>
        <EditText
                android:id="@+id/add_content_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="8"
                android:maxLines="10"
                android:scrollbars="vertical"
                android:gravity="top"/>
    </LinearLayout>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal">
        <Button
                android:id="@+id/add_button_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/commit"
                android:onClick="addIdea"
                android:layout_alignParentBottom="true" android:layout_alignParentLeft="true"/>
    </RelativeLayout>
</LinearLayout>
